# wave-ready-linter

./: .env.example  Cargo.toml  README.md  plan.md
.github/workflows/: wave-check.yml
src/: analyzer.rs  contract.rs  github.rs  main.rs
