[package]
name = "wave_ready_linter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
octocrab = "0.38.0"
clap = { version = "4.0", features = ["derive"] }
alloy = { version = "0.2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.0"
colored = "2.0"
eyre = "0.6"
reqwest = { version = "0.12", features = ["json"] }
